@@ -8,9 +8,9 @@
     "factorio_version": "2.0",
     "quality_required": true,
     "dependencies": [
-        "base >= 2.0.42",
-        "space-age >= 2.0.42",
-        "quality >= 2.0.42",
+        "base >= 2.0.49",
+        "space-age >= 2.0.49",
+        "quality >= 2.0.49",
         "PlanetsLib >= 1.3.6"
     ]
 }
