@@ -1,5 +1,5 @@
 for _, module in pairs(data.raw.module) do
 	if module.effect.quality then
-		module.effect.quality = -module.effect.quality * 3
+		module.effect.quality = -module.effect.quality * 10 * 3 / 4
 	end
 end
